--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ input {
     margin: 0 10px;
 }
 
+#speedSlider {
+    width: 200px; /* Smaller replay speed bar */
+}
+
 button {
     font-size: 20pt;
     padding: 10px 20px;
